--- a/week-36.2-todo-app/backend/ops/deployment.yml
+++ b/week-36.2-todo-app/backend/ops/deployment.yml
@@ -14,17 +14,14 @@ spec:
     spec:
       containers:
       - name: todo-app
-        image: chetankumar01/todo-app-be:1
+        image: chetankumar01/todo-app-be:2
         ports:
         - containerPort: 3000
-        env: 
-        - name: PORT
-          valueFrom: 
-            configMapKeyRef:
-              name: backend-config
-              key: port
-        - name: DB_URL
-          valueFrom: 
-            secretKeyRef:
-              name: backend-secrets
-              key: db_url
+        volumeMounts:
+          - name : env-file
+            readOnly: true
+            mountPath: "/app/secret/"
+      volumes:
+       - name: env-file
+         secret:
+           secretName: backend-secrets
